# graphcap

./: .cursorignore  .dockerignore  .gitignore  .npmrc  INSTALLATION.md  README.md  SECURITY.md  Taskfile.yml  docker-compose.override.example.yml  docker-compose.yml  genindex.html  index.html  objects.inv  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  search.html  searchindex.js  sonar-project.properties  tsconfig.base.json
.cursor/rules/: code_style.mdc  documentation.mdc  modern-react-components.mdc  task.mdc  test_policy.mdc
.doctrees/: environment.pickle  index.doctree
.doctrees/alpha/: alpha.doctree
.doctrees/concepts/: perspectives.doctree
.doctrees/dev/: architecture.doctree  caption_pipeline.doctree  debug_suggestions.doctree  workspaces.doctree
.doctrees/getting_started/: caption_pipeline.doctree  configuration.doctree  datasets.doctree  docker_override.doctree  hello_world.doctree  index.doctree  workspaces.doctree
.doctrees/ui/: action_drawers.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: architecture_update.md
.github/workflows/: documentation.yml  package.yml  test.yml
.sonarlint/: connectedMode.json
_sources/: index.rst.txt
_sources/alpha/: alpha.md.txt
_sources/concepts/: perspectives.rst.txt
_sources/dev/: architecture.rst.txt
_sources/getting_started/: hello_world.rst.txt
_sources/ui/: action_drawers.rst.txt
alpha/: alpha.html
apps/graphcap-manager/: index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
concepts/: perspectives.html
data_service/: .dockerignore  Dockerfile  Taskfile.data.yml  entrypoint.sh  package.json
data_service/src/: app.ts  index.ts
deploy/: Dockerfile.backend.base  Dockerfile.base  Dockerfile.python.base  Dockerfile.ts.base  Taskfile.build.yml
dev/: architecture.html  caption_pipeline.html  debug_suggestions.html  workspaces.html
dev/servers/: data_service.html  inference_bridge.html  media_server.html
doc/: index.rst
doc/concepts/: perspectives.rst
doc/dev/: architecture.rst  debug_suggestions.rst  workspaces.rst
doc/getting_started/: caption_pipeline.rst  configuration.rst  datasets.rst  docker_override.rst  index.rst
doc/ui/: action_drawers.rst
getting_started/: caption_pipeline.html  configuration.html  datasets.html  docker_override.html  hello_world.html  index.html  workspaces.html
getting_started/providers/: vllm.html
graphcap/: __init__.py
graphcap/pipelines/: Taskfile.pipelines.yml
graphcap/server/: .dep_hash  Dockerfile.server  pyproject.toml
graphcap_studio/: Dockerfile.client.dev  Taskfile.studio.yml  package.json  pnpm-lock.yaml  tailwind.config.js  tsr.config.json  vite.config.ts  vitest.config.ts
graphcap_studio/media_server/: Dockerfile.image_processor  (+7 more)
servers/: README.md
src/: README.md  Taskfile.graphcap.yml  pyproject.toml
storybook/: iframe.html  index.json  project.json
test/: conftest.py  ollama_connection.ipynb  test_hello_world.py
ui/: action_drawers.html
workspace/: .gitignore
(+1382 files in other folders)
