[project]
name = "graphcap_project"
version = "0.1.0"
description = "Graphcap is a tool for capturing and analyzing graph data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "openai>=1.66.3",
    "python-dotenv>=1.0.1",
    "termcolor>=2.5.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2.post1",
    "contxt>=0.1.1",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Source directories
src = ["./servers/inference_server"]

# Same as Black
line-length = 120
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default
select = ["E", "F", "W", "I001"]
ignore = ["W293"]

# Allow fix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv]
link-mode = "copy"
dev-dependencies = [
    "pytest-asyncio>=0.25.3",
]
